changed the graph to be a sliding graph, updating as the weeks go